--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
 		"prerender": "http-server -c-1 dist/angular-ssr-course/browser",
 		"dev:ssr": "ng serve",
 		"build:ssr": "ng build --configuration=production",
-		"serve:ssr": "node dist/angular-ssr-course/server/server.mjs"
+		"serve:ssr": "node dist/angular-ssr-course/server/server.mjs",
+		"serve:ssr:angular-ssr": "node dist/angular-ssr/server/server.mjs"
 	},
 	"private": true,
 	"dependencies": {
@@ -28,7 +29,8 @@
 		"@angular/router": "^19.0.1",
 		"@angular/ssr": "^19.0.2",
 		"@types/express": "^4.17.8",
-		"express": "^4.15.2",
+		"express": "^4.18.2",
+		"inquirer": "^12.5.0",
 		"rxjs": "~7.8.0",
 		"tslib": "^2.3.0",
 		"zone.js": "~0.15.0"
@@ -38,9 +40,10 @@
 		"@angular/cli": "^19.0.2",
 		"@angular/compiler-cli": "^19.0.1",
 		"@ianvs/prettier-plugin-sort-imports": "^4.2.1",
+		"@types/express": "^4.17.17",
 		"@types/jasmine": "~3.8.0",
 		"@types/jasminewd2": "~2.0.3",
-		"@types/node": "^14.15.0",
+		"@types/node": "^18.18.0",
 		"http-server": "^14.0.0",
 		"jasmine-core": "~3.8.0",
 		"jasmine-spec-reporter": "~5.0.0",
