--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
 	"version": 1,
 	"newProjectRoot": "projects",
 	"projects": {
-		"angular-ssr": {
+		"ssr": {
 			"projectType": "application",
 			"schematics": {
 				"@schematics/angular:component": {
@@ -18,7 +18,7 @@
 					"builder": "@angular-devkit/build-angular:application",
 					"options": {
 						"outputPath": {
-							"base": "dist/angular-ssr"
+							"base": "dist/ssr"
 						},
 						"index": "src/index.html",
 						"polyfills": ["src/polyfills.ts"],
@@ -32,9 +32,9 @@
 						"namedChunks": true,
 						"browser": "src/main.ts",
 						"server": "src/main.server.ts",
-						"outputMode": "server",
+						"prerender": true,
 						"ssr": {
-							"entry": "src/server.ts"
+							"entry": "server.ts"
 						}
 					},
 					"configurations": {
@@ -73,7 +73,7 @@
 				"serve": {
 					"builder": "@angular-devkit/build-angular:dev-server",
 					"options": {
-						"buildTarget": "angular-ssr:build"
+						"buildTarget": "ssr:build"
 					},
 					"configurations": {
 						"development": {
@@ -82,14 +82,14 @@
 							"sourceMap": true
 						},
 						"production": {
-							"buildTarget": "angular-ssr:build:production"
+							"buildTarget": "ssr:build:production"
 						}
 					}
 				},
 				"extract-i18n": {
 					"builder": "@angular-devkit/build-angular:extract-i18n",
 					"options": {
-						"buildTarget": "angular-ssr:build"
+						"buildTarget": "ssr:build"
 					}
 				},
 				"test": {
@@ -111,11 +111,11 @@
 					"builder": "@angular-devkit/build-angular:protractor",
 					"options": {
 						"protractorConfig": "e2e/protractor.conf.js",
-						"devServerTarget": "angular-ssr:serve"
+						"devServerTarget": "ssr:serve"
 					},
 					"configurations": {
 						"production": {
-							"devServerTarget": "angular-ssr:serve:production"
+							"devServerTarget": "ssr:serve:production"
 						}
 					}
 				}
