--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "angular-ssr-course",
+	"name": "ssr",
 	"version": "0.0.0",
 	"scripts": {
 		"ng": "ng",
@@ -8,11 +8,10 @@
 		"test": "ng test",
 		"lint": "ng lint",
 		"e2e": "ng e2e",
-		"prerender": "http-server -c-1 dist/angular-ssr-course/browser",
+		"prerender": "http-server -c-1 dist/ssr/browser",
 		"dev:ssr": "ng serve",
 		"build:ssr": "ng build --configuration=production",
-		"serve:ssr": "node dist/angular-ssr-course/server/server.mjs",
-		"serve:ssr:angular-ssr": "node dist/angular-ssr/server/server.mjs"
+		"serve:ssr": "node dist/ssr/server/server.mjs"
 	},
 	"private": true,
 	"dependencies": {
@@ -28,9 +27,7 @@
 		"@angular/platform-server": "^19.0.1",
 		"@angular/router": "^19.0.1",
 		"@angular/ssr": "^19.0.2",
-		"@types/express": "^4.17.8",
 		"express": "^4.18.2",
-		"inquirer": "^12.5.0",
 		"rxjs": "~7.8.0",
 		"tslib": "^2.3.0",
 		"zone.js": "~0.15.0"
@@ -39,11 +36,10 @@
 		"@angular-devkit/build-angular": "^19.0.2",
 		"@angular/cli": "^19.0.2",
 		"@angular/compiler-cli": "^19.0.1",
-		"@ianvs/prettier-plugin-sort-imports": "^4.2.1",
-		"@types/express": "^4.17.17",
-		"@types/jasmine": "~3.8.0",
+		"@types/express": "^5.0.0",
+		"@types/jasmine": "^5.1.4",
 		"@types/jasminewd2": "~2.0.3",
-		"@types/node": "^18.18.0",
+		"@types/node": "^22.10.0",
 		"http-server": "^14.0.0",
 		"jasmine-core": "~3.8.0",
 		"jasmine-spec-reporter": "~5.0.0",
@@ -52,8 +48,7 @@
 		"karma-coverage-istanbul-reporter": "~3.0.2",
 		"karma-jasmine": "~4.0.0",
 		"karma-jasmine-html-reporter": "^1.5.0",
-		"prettier-plugin-organize-attributes": "^1.0.0",
-		"ts-node": "~8.3.0",
-		"typescript": "~5.6.3"
+		"ts-node": "^10.9.2",
+		"typescript": "^5.6.3"
 	}
 }
