--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -5,6 +5,6 @@
 		"outDir": "./out-tsc/app",
 		"types": ["node"]
 	},
-	"files": ["src/main.ts", "src/polyfills.ts", "src/main.server.ts", "src/server.ts"],
+	"files": ["src/main.ts", "src/polyfills.ts", "src/main.server.ts", "server.ts"],
 	"include": ["src/**/*.d.ts"]
 }
